more alignment fixes for smaller screens

--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -168,7 +168,7 @@ a:focus {
 
 .content-img {
   max-width: 100%;
-  max-height: 600px;
+  max-height: 400px;
   margin:  35px 0 70px 0;
 }
 
